--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -11,6 +11,7 @@
     - libapache2-mod-fcgid
     - apache2-suexec-pristine
   when: ansible_pkg_mgr == "apt" and ( use_perl or use_fcgid )
+  notify: restart apache2
 
 - name: Enable common apache modules
   apache2_module: name={{ item }}
@@ -22,6 +23,7 @@
     - filter
     - deflate
     - headers
+  notify: restart apache2
 
 - name: Enable fcgid apache module
   apache2_module: name={{ items }}
@@ -30,6 +32,7 @@
     - fcgid
     - suexec
   when: use_perl or use_fcgid
+  notify: restart apache2
 
 - name: Enable default sites
   file: state={% if item.create %}link{% else %}absent{% endif %} src={{ item.src }} path={{ item.dest }}
@@ -40,21 +43,24 @@
     - src: /etc/apache2/sites-available/000-default.conf
       dest: /etc/apache2/sites-enabled/000-default.conf
       create: "{{ apache_use_default }}"
+  notify: restart apache2
 
 - name: Disable mpm
   command: a2dismod mpm_{{ item }}
   register: a2dismod_output
-  changed_when: "\"Module mpm_{{ item }} disabled.\" in a2dismod_output.stdout"
-  when: "\"{{ item }}\" != \"{{ apache_mpm }}\""
+  changed_when: "\"Module mpm_\" + item + \"disabled.\" in a2dismod_output.stdout"
+  when: "item != apache_mpm"
   with_items:
     - prefork
     - event
     - worker
+  notify: restart apache2
 
 - name: Enable mpm
   command: a2enmod mpm_{{ apache_mpm }}
   register: a2enmod_output
-  changed_when: "\"Enabling module mpm_{{ apache_mpm }}.\" in a2enmod_output.stdout"
+  changed_when: "\"Enabling module mpm_\" + apache_mpm + \".\" in a2enmod_output.stdout"
+  notify: restart apache2
 
 - name: logrotate
   copy: src=vhost dest=/etc/logrotate.d/vhost owner=root group=root mode=0644
